@@ -136,7 +136,7 @@ if ($_FILES['_file']['tmp_name'] && is_uploaded_file($_FILES['_file']['tmp_name'
       }
 
       // We're using UTF8 internally
-      $email = idn_to_utf8($email);
+      $email = rcube_idn_to_utf8($email);
       
       if (!$replace) {
         // compare e-mail address
