@@ -46,7 +46,7 @@ if (!empty($_POST['_address']) && is_object($CONTACTS))
       $OUTPUT->send();
     }
 
-    $contact['email'] = idn_to_utf8($contact['email']);
+    $contact['email'] = rcube_idn_to_utf8($contact['email']);
 
     // use email address part for name
     if (empty($contact['name']) || $contact['name'] == $contact['email'])
